--- a/index.html
+++ b/index.html
@@ -737,11 +737,11 @@
         <div class="not-relative">
           <div class="block-title-with-pagination advisors">
             <h2>Advisors and Partners</h2>
-            <div class="slider-pagination advisors">
+            <!-- <div class="slider-pagination advisors">
               <div class="swiper-button-prev advisors "></div>
               <div class="swiper-pagination advisors"></div>
               <div class="swiper-button-next advisors"></div>
-            </div>
+            </div> -->
           </div>
           <div>
             <div class="advisors-slider">
@@ -765,7 +765,7 @@
                       Escrow agent, legal engineer with solid expertise in providing legal support for the cryptocurrency business, managing partner at Juscutum                    </div>
                   </div>
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-3.png" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-3.jpg" alt="">
                     <div class="name">
                       Den Beregovyi
                     </div>
@@ -773,7 +773,7 @@
                       Token sale legal advisor partner & co-founder at Axon Partners
                     </div>
                   </div>
-                  <div class="swiper-slide">
+                  <!-- <div class="swiper-slide">
                     <img class="advisor-image" src="./src/img/advisor-4.png" alt="">
                     <div class="name">
                       Kharenko Michael
@@ -781,7 +781,7 @@
                     <div class="member-description">
                       Legal and investment advisor, Sayenko Kharenko & partners
                     </div>
-                  </div>
+                  </div> -->
                   <div class="swiper-slide">
                     <img class="advisor-image" src="./src/img/advisor-5.png" alt="">
                     <div class="name">
