One more phrase changed

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="hk-central_block">
       <div>
         <h1>Dedicated <span class="hk-text_blue">cryptocurrency</span><br /><span class="hk-text_bold">for white hat hackers</span></h1>
-        <p>Invest into the safe data future</p>
+        <p>Invest in future. Invest in your side of firewall</p>
         <div class="main-page-links">
           <a href="./src/files/HackenWP.pdf"><span class="hk-pdf">PDF</span>Whitepaper</a>
           <a href=""><span class="hk-video"><i class="zmdi zmdi-play-circle"></i></i></span>Watch video</a>
