some little fix + independence

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -10,7 +10,7 @@
 
   <!-- CSS FILES -->
   <link href="src/css/style.css" rel="stylesheet">
-  <link href="../src/css/fonts.css" rel="stylesheet">
+  <link href="src/css/fonts.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <div class="to_bottom">
       <p class="hk-to_user">Please use this landing at web devices</p>
       <div class="main-page-links">
-        <a href="../src/files/HackenWP.pdf"><span class="hk-pdf">PDF</span>Whitepaper</a>
+        <a href="src/files/HackenWP.pdf"><span class="hk-pdf">PDF</span>Whitepaper</a>
       </div>
     </div>
   </div>
