--- a/mobile/index.html
+++ b/mobile/index.html
@@ -27,7 +27,7 @@
     <div class="to_bottom">
       <p class="hk-to_user">Please use this landing at web devices</p>
       <div class="main-page-links">
-        <a href="src/files/HackenWP.pdf"><span class="hk-pdf">PDF</span>Whitepaper</a>
+        <a href="src/files/HackenWP.pdf" download><span class="hk-pdf">PDF</span>Whitepaper</a>
       </div>
     </div>
   </div>
