1,2 screen on tablet and norm look mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="src/css/swiper.css" rel="stylesheet">
   <link rel="stylesheet" href="https://i.icomoon.io/public/9a1e688c69/UntitledProject3/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css" />
-  <link rel="stylesheet" media="all and (min-width: 768px) and (max-width: 1223px)" href="src/css/tablet.css">
+  <link rel="stylesheet" media="all and (max-width: 1223px)" href="src/css/tablet.css">
 </head>
 
 <body>
@@ -252,6 +252,9 @@
             </a>
           </li>
         </ul>
+        <div class="tablet-toggle_menu">
+          <a href=""><i class="zmdi zmdi-close"></i></a>
+        </div>
       </div>
 
       <ul class="hk-nav-menu">
