Add subscribe modal link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <a class="hk-subscribe" href="">
       <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
-      <span class="hk-subscribe-link">Subscribe to our newsletter</span>
+      <span onclick="toggleMainModal(true)" class="hk-subscribe-link">Subscribe to our newsletter</span>
     </a>
 
     <div id="hk-language-select">
