--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="https://i.icomoon.io/public/9a1e688c69/UntitledProject3/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css" />
   <link rel="stylesheet" media="all and (max-width: 1223px)" href="src/css/tablet.css">
+  <link rel="stylesheet" media="all and (max-width: 786px)" href="src/css/mobile.css">
+
 </head>
 
 <body>
@@ -140,7 +142,7 @@
   <!--  -->
 
   <header class="hk-header  hk-tablet">
-    <a class="hk-logo" href=""><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
+    <a class="hk-logo" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
     <div class="hk-subscribe" href="">
       <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
@@ -217,7 +219,7 @@
     </header>
 
     <nav class="hk-navigation">
-      <a class="hk-logo hk-desktop" href=""><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
+      <a class="hk-logo hk-desktop" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
       <div class="hk-tablet hk-tablet-menu_header">
         <ul class="hk-social">
