--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://i.icomoon.io/public/9a1e688c69/UntitledProject3/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css" />
   <link rel="stylesheet" media="all and (max-width: 1223px)" href="src/css/tablet.css">
-  <link rel="stylesheet" media="all and (max-width: 786px)" href="src/css/mobile.css">
+  <link rel="stylesheet" media="all and (max-width: 787px)" href="src/css/mobile.css">
 
 </head>
 
@@ -162,7 +162,7 @@
 
   <div id="fullpage">
 
-  <div class="hk-screen hk-main section">
+  <div class="hk-screen hk-main section section-home">
     <div class="video-container">
       <video id="video-loader" preload autoplay>
           <source src="./src/video/onload.mp4" />
