--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     <div class="hk-central_block">
       <div class="not-relative">
         <h2>Timeline</h2>
+        <div class="hk-timeline-figure-mobile"></div>
         <div class="hk-timeline-figure absolute-center margin-none">
           <div class="hk-timeline-line-1">
             <span class="hk-cell-1">August 10</span>
