fix milestones, tokenSale, ecosystem

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://i.icomoon.io/public/9a1e688c69/UntitledProject3/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css" />
   <link rel="stylesheet" media="all and (max-width: 1223px)" href="src/css/tablet.css">
-  <link rel="stylesheet" media="all and (max-width: 786px)" href="src/css/mobile.css">
+  <link rel="stylesheet" media="all and (max-width: 767px)" href="src/css/mobile.css">
 
 </head>
 
@@ -439,39 +439,39 @@
             <div class="hk-milestones-block_cards">
               <div class="hk-milestones-block hk-block-1">
                 <p>
-                  <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
-                  <br /><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform
+                  <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-2">
                 <p>
-                  <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
-                  <br /><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform
-                  <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                  <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
+                  <span class="mil-left"><br /><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-3">
                 <p>
-                  <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
-                  <br /><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform
-                  <br /><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                  <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
+                  <span class="mil-left"><br /><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-4">
                 <p>
-                  <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
-                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform
-                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
-                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
+                  <span class="mil-left"><span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-left"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-5">
                 <p>
-                  <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
-                  <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform
-                  <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
-                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
-                  <br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity analytics center
+                  <span class="mil-left"><span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference</span>
+                  <span class="mil-left"><br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+                  <span class="mil-right"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
+                  <span class="mil-left"><br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity analytics center</span>
                 </p>
               </div>
             </div>
