tablet ready, maybe have some bags on short screen devices, will be fixed later

--- a/index.html
+++ b/index.html
@@ -796,11 +796,11 @@
         <div class="not-relative">
           <div class="block-title-with-pagination advisors">
             <h2>Advisors and Partners</h2>
-            <!-- <div class="slider-pagination advisors">
+            <div class="slider-pagination advisors hk-tablet">
               <div class="swiper-button-prev advisors "></div>
               <div class="swiper-pagination advisors"></div>
               <div class="swiper-button-next advisors"></div>
-            </div> -->
+            </div>
           </div>
           <div>
             <div class="advisors-slider">
