mobile first, second, third & fourth screen

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
   <header class="hk-header  hk-tablet">
     <a class="hk-logo" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
-    <div class="hk-subscribe" href="">
+    <div class="hk-subscribe" onclick="toggleMainModal(true)">
       <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
-      <span onclick="toggleMainModal(true)" class="hk-subscribe-link">Subscribe to our newsletter</span>
+      <span class="hk-subscribe-link">Subscribe to our newsletter</span>
     </div>
 
     <div id="hk-language-select">
@@ -945,4 +945,4 @@
 <script src="./src/js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.js"></script>
 
-</html>div
+</html>
