--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       <div>
         <h2 class="">Token sale <br> details</h2>
         <hr class="token-sale-hr" />
-        <p class="hk-details-quote_text">Total supply: 20 mln Hackens. 1.3 mln at presale (1 mln + 30% bonus) and 18.7 mln at Token sale.<br />No future emissions</p>
+        <p class="hk-details-quote_text">Total supply: 20 mln Hackens. 1.3 mln at presale (1 mln + 30% bonus) and 18.7 mln at Token sale. No future emissions</p>
         <div class="hk-details-panes_container">
           <div class="hk-details-pane">
             <h5>Symbol</h5> HKN
