12 ready, turn off social icons

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <a class="hk-logo hk-desktop" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
       <div class="hk-tablet hk-tablet-menu_header">
-        <ul class="hk-social">
+        <!-- <ul class="hk-social">
           <li class="hk-social-link">
             <a href="#" role="link">
               <span class="icon-socials ico-slack"></span>
@@ -253,7 +253,7 @@
               <span class="icon-socials ico-bitcoin"></span>
             </a>
           </li>
-        </ul>
+        </ul> -->
         <div onclick="toggleTabletMenu(false)" class="tablet-toggle_menu">
           <a onclick="return false" href=""><i class="zmdi zmdi-close"></i></a>
         </div>
