5th on mobile + modal

--- a/index.html
+++ b/index.html
@@ -409,7 +409,46 @@
       <div class="not-relative">
         <h2>Milestones</h2>
         <div>
-          <div class="absolute-center">
+          <div class="hk-tablet">
+            <h4>1. Minimum milestone</h4>
+            <span class="hk-money">1,5 mln</span>
+            <p class="hk-p-1">
+              <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
+              <span class="mil-right"><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform</span>
+            </p>
+            <h4>2. Limited Milestone</h4>
+            <span class="hk-money">4 mln</span>
+            <p class="hk-p-2">
+              <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
+              <span class="mil-left"><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform</span>
+              <span class="mil-right"><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+            </p>
+            <h4>3. Target Milestone</h4>
+            <span class="hk-money">10 mln</span>
+            <p class="hk-p-3">
+              <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
+              <span class="mil-left"><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform</span>
+              <span class="mil-right"><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+            </p>
+            <h4>4. Advanced Milestone</h4>
+            <span class="hk-money">18 mln</span>
+            <p class="hk-p-4">
+              <span class="mil-left"><span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference</span>
+              <span class="mil-right"><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform</span>
+              <span class="mil-left"><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+              <span class="mil-right"><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
+            </p>
+            <h4>5. Maximum Milestone</h4>
+            <span class="hk-money">20 mln</span>
+            <p class="hk-p-5">
+              <span class="mil-left"><span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference</span>
+              <span class="mil-left"><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform</span>
+              <span class="mil-right"><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+              <span class="mil-right"><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
+              <span class="mil-left"><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity analytics center</span>
+            </p>
+          </div>
+          <div class="absolute-center hk-desktop">
             <div class="hk-milestones-block_headers">
               <div class="hk-milestones-block_header-1">
                 <h4>1. Minimum milestone</h4>
