--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <!--  -->
 
   <header class="hk-header  hk-tablet">
-    <a class="hk-logo" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
+    <a class="hk-logo" onclick="onNavClick(this, 0)" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
     <div class="hk-subscribe" onclick="toggleMainModal(true)">
       <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
@@ -219,7 +219,7 @@
     </header>
 
     <nav class="hk-navigation">
-      <a class="hk-logo hk-desktop" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
+      <a class="hk-logo hk-desktop" onclick="onNavClick(this, 0)" href="javascript:void(0)"><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
       <div class="hk-tablet hk-tablet-menu_header">
         <!-- <ul class="hk-social">
