--- a/index.html
+++ b/index.html
@@ -932,9 +932,9 @@
               </div>
             </div>
             <div class="hk-header-last">
-              <div class="hk-subscribe" href="">
+              <div class="hk-subscribe" onclick="toggleMainModal(true)">
                 <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
-                <span onclick="toggleMainModal(true)" class="hk-subscribe-link">Subscribe to our newsletter</span>
+                <span class="hk-subscribe-link">Subscribe to our newsletter</span>
               </div>
 
               <!-- <ul class="hk-social">
@@ -969,9 +969,9 @@
                   </a>
                 </li>
               </ul> -->
-              <div class="hk-become" href="">
+              <div class="hk-become" onclick="toggleAdvisorModal(true)">
                 <span class="hk-subscribe-icon"><i class="zmdi zmdi-account-box"></i></span>
-                <span onclick="toggleAdvisorModal(true)" class="hk-subscribe-link">Become Advisor</span>
+                <span class="hk-subscribe-link">Become Advisor</span>
               </div>
             </div>
           </div>
