hide watach video

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <p>Invest in future. Invest in your side of firewall</p>
         <div class="main-page-links">
           <a href="./src/files/HackenWP.pdf"><span class="hk-pdf">PDF</span>Whitepaper</a>
-          <a href=""><span class="hk-video"><i class="zmdi zmdi-play-circle"></i></i></span>Watch video</a>
+          <!-- <a href=""><span class="hk-video"><i class="zmdi zmdi-play-circle"></i></i></span>Watch video</a> -->
         </div>
       </div>
     </div>
