timer and amount of money

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       </div>
       <div class="hk-amount">
         <span class="hk-amount-header">Amount of money raised</span>
-        <span class="hk-amount-number">36</span>
+        <span class="hk-amount-number">295 000</span>
       </div>
 
     </div>
