fix mistakes in bonus, details, campaign

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <span class="hk-cell-4">September 11</span>
           </div>
           <div class="hk-timeline-line-2">
-            <span class="hk-cell-1">Campain starts</span>
+            <span class="hk-cell-1">Campaign starts</span>
             <span class="hk-cell-2">Online CTF <br />challenge Launch</span>
             <span class="hk-cell-3">Winners of CTF Challenge announced <br />and invited to HackIT Cup</span>
             <span class="hk-cell-4">HKN presale</span>
@@ -564,7 +564,7 @@
             <h5>Initial price</h5> 1 Hacken = 1 USD
           </div>
           <div class="hk-details-pane">
-            <h5>Crypto currencies<br />accepted</h5> BTC, ETH, DASH,<br />LTC, ETC, USDT,<br />EUR, USD
+            <h5>Currencies<br />accepted</h5> BTC, ETH, DASH,<br />LTC, ETC, USDT,<br />EUR, USD
           </div>
           <div class="hk-details-pane">
             <h5>Length of<br />Token sale</h5> 1 month from<br />October 9th 2017
@@ -585,7 +585,7 @@
         </p>
         <div class="hk-bonuses-figure">
             <div class="hk-bonus_timer">
-              <p>Time to complete current bonuse:</p>
+              <p>Time to complete current bonus:</p>
               <hr />
               <div class="hk-bonus_timer-time">
 
