add and change links

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
             <div class="swiper-wrapper">
 
               <div class="swiper-slide"
-              onclick="window.open('http://linkedin.com/in/dmytro-budorin-acca-56a98035 ', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('http://linkedin.com/in/dmytro-budorin-acca-56a98035 ', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-8-active.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-8.jpg" alt="">
                 <div class="name">
@@ -716,7 +716,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('http://www.linkedin.com/in/Nikita-Knysh', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('http://www.linkedin.com/in/Nikita-Knysh', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-4.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-4-active.jpg" alt="">
                 <div class="name">
@@ -731,7 +731,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('http://linkedin.com/in/dr-yegor-aushev-54b18455', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('http://linkedin.com/in/dr-yegor-aushev-54b18455', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-7.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-7-active.jpg" alt="">
               <div class="name">
@@ -745,7 +745,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('http://linkedin.com/in/andriimatiukhin', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('http://linkedin.com/in/andriimatiukhin', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-1.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-1-active.jpg" alt="">
                 <div class="name">
@@ -762,7 +762,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('https://www.linkedin.com/in/vladimir-taratushka-%E2%9C%94-84040960/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('https://www.linkedin.com/in/vladimir-taratushka-%E2%9C%94-84040960/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-6.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-6-active.jpg" alt="">
                 <div class="name">
@@ -776,7 +776,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('https://www.linkedin.com/in/broshevan/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('https://www.linkedin.com/in/broshevan/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-2.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-2-active.jpg" alt="">
                 <div class="name">
@@ -790,7 +790,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('https://www.linkedin.com/in/olga-samoilova-52506964', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('https://www.linkedin.com/in/olga-samoilova-52506964', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-5.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-5-active.jpg" alt="">
                 <div class="name">
@@ -807,7 +807,7 @@
               </div>
 
               <div class="swiper-slide"
-              onclick="window.open('https://www.linkedin.com/in/lyubomyr-pavlyk-111a4b48/', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+              onclick="window.open('https://www.linkedin.com/in/lyubomyr-pavlyk-111a4b48/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
                 <img class="team-image" src="./src/img/team-3.jpg" alt="">
                 <img class="team-image-active" src="./src/img/team-3-active.jpg" alt="">
                 <div class="name">
@@ -846,7 +846,12 @@
               <div id="swiper-container-advisors" class="swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-1.png" alt="">
+                    <img
+                      class="advisor-image"
+                      src="./src/img/advisor-1.png"
+                      alt=""
+                      onclick="window.open('https://www.linkedin.com/in/lastperson/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                     <div class="name">
                       Oleksiy Matiiasevych
                     </div>
@@ -855,7 +860,9 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-2.png" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-2.png" alt=""
+                    onclick="window.open('https://www.linkedin.com/in/afian/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                     <div class="name">
                       Artem Afyan
                     </div>
@@ -863,7 +870,9 @@
                       Escrow agent, legal engineer with solid expertise in providing legal support for the cryptocurrency business, managing partner at Juscutum                    </div>
                   </div>
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-3.jpg" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-3.jpg" alt=""
+                    onclick="window.open('https://www.linkedin.com/in/denysberegovyi/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                     <div class="name">
                       Den Beregovyi
                     </div>
@@ -881,7 +890,9 @@
                     </div>
                   </div> -->
                   <div class="swiper-slide">
-                    <img class="advisor-image" src="./src/img/advisor-5.png" alt="">
+                    <img class="advisor-image" src="./src/img/advisor-5.png" alt=""
+                    onclick="window.open('https://www.linkedin.com/in/krakovetskyi/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                     <div class="name">
                       Vladymyr Krakovetskiy
                     </div>
